| Bug #10358 | Cluster failure with non started node can lead to transactions timeout | ||
|---|---|---|---|
| Submitted: | 4 May 2005 15:37 | Modified: | 10 May 2005 10:28 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | 4.1 | OS: | |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[4 May 2005 15:37]
Jonas Oreland
