bug#10358 - ndb   Cluster failure with non started nodes can result in timedout transactions